--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/DamithaPerera/ulventech#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "sqlite3": "^5.0.6"
   },
   "devDependencies": {
