--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "sqlite3": "^5.0.6"
+    "sqlite3": "^5.0.6",
+    "url-pattern": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
