--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "joi": "^17.4.0",
     "sqlite3": "^5.0.6",
     "url-pattern": "^1.0.3"
   },
